force-app/main/default/objects/OpportunityLineItem/fields/Funding_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Funding_Month_Year__c</fullName>
    <formula>CASE(MONTH( ServiceDate ),
1, &apos;January&apos;,
2, &apos;February&apos;,
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
12, &apos;December&apos;,&apos;&apos;
)+&apos; &apos;+TEXT(YEAR( ServiceDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Month/Year</label>
    <type>Text</type>
</CustomField>