force-app/main/default/objects/OpportunityLineItem/fields/Product_Goal__c.field-meta.xml
<CustomField>
    <fullName>Product_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Goal</label>
    <referenceTo>Product_Goal__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>